@@ -1,5 +1,8 @@
 2006-04-30  Ulrich Drepper  <drepper@redhat.com>
 
+	* nis/nss_nisplus/nisplus-publickey.c (parse_grp_str): PIDLIST is
+	supposed to have NGRPS elements.
+
 	* nis/nss_nisplus/nisplus-parser.c: Minor optimizations and
 	cleanups.  Avoid copying data if it can be used in the old place.
 
